--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "ant-design-vue": "^1.7.8",
     "core-js": "^3.6.5",
+    "easy_calc_uiharu": "^1.0.2",
     "file-saver": "^2.0.5",
+    "mathjs": "^10.4.0",
     "vue": "^2.6.11",
     "vue-cli-configjs": "^2.0.0",
     "vue-router": "^3.5.1"
